added slides to demonstration how BootsFaces makes things simple

--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
@@ -25,7 +25,7 @@
     </b:column>
   </b:row>
   
-  <navigator left="#start" right="#keyFeaturesAF" down="#gridSystem"/>
+  <navigator left="#start" right="#keyFeaturesAF" down="#simplification"/>
   
 
 
