--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
@@ -31,7 +31,7 @@
         collapsible="false" />
     </b:column>
   </b:row>
-  <navigator up="#keyFeaturesBF" down="gridSystemStack"
+  <navigator up="#simplification" down="gridSystemStack"
     right="gridSystemSourcecode" />
 
 
