--- a/BootsFacesPresentation/src/main/webapp/10_angularJS/ngComponents.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/10_angularJS/ngComponents.xhtml
@@ -6,11 +6,13 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="Use Angular Components in JSF" />
+  <header title="How to use AngularJS with JSF?" />
   <b:row>
     <b:column col-md="12">
         <ul>
           <li>Marco Rinck's JUA</li>
+          <li>AngularBeans</li>
+          <li>AngularFaces</li>
         </ul>
     </b:column>
   </b:row>
