--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesBF.xhtml
@@ -14,8 +14,9 @@
           <li>next-generation JSF framework</li>
           <li>HTML5 at your finger tips</li>
           <li>Bootstrap 3.3 made easy</li>
-          <li>Next stop: Bootstrap 4</li>
+          <li>Next stop: Bootstrap 4 (may take some time)</li>
           <li>Advanced AJAX</li>
+          <li>Search Expressions</li>
           <li>48 components and counting</li>
           <li>Bootswatch themes</li>
           <li>Mobile first!</li>
