--- a/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
@@ -26,5 +26,11 @@
       </b:panel>
     </b:column>
   </b:row>
+  <b:row>
+    <b:column col-md="6">short history of BootsFaces
+    </b:column>
+    <b:column col-md="6">short history of AngularFaces
+    </b:column>
+  </b:row>
   <navigator right="#keyFeaturesBF" down="#dogFood"/>
 </ui:fragment>
