--- a/BootsFacesPresentation/src/main/webapp/30_roadmap/roadmapAF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/30_roadmap/roadmapAF.xhtml
@@ -16,6 +16,14 @@
         </ul>
     </b:column>
   </b:row>
+   <b:row>
+    <b:column col-md="12">
+       <h3>State of the art:</h3>
+        <ul>
+          <li>dormant</li>
+        </ul>
+    </b:column>
+  </b:row>
   
    <navigator left="#roadmapBF" right="questions" />
 </ui:fragment>
