--- a/BootsFacesPresentation/src/main/webapp/30_roadmap/roadmapBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/30_roadmap/roadmapBF.xhtml
@@ -9,20 +9,22 @@
   <header title="Roadmap for BootsFaces" />
   <b:row>
     <b:column col-md="12">
-    <h3>BootsFaces 0.8.0:</h3>
-        <ul>
-          <li>unified AJAX engine</li>
-          <li>advanced search expressions</li>
-          <li>many new components</li>
-        </ul>
-    <h3>BootsFaces 0.9.0:</h3>
+     <h3>BootsFaces 0.9.0:</h3>
         <ul>
           <li>more components</li>
-          <li>swipe gesture support</li>
         </ul>
     <h3>BootsFaces 1.0:</h3>
         <ul>
+           <li>swipe gesture support</li>
           <li>...</li>
+        </ul>
+    </b:column>
+  </b:row>
+  <b:row>
+    <b:column col-md="12">
+       <h3>State of the art:</h3>
+        <ul>
+          <li>production ready (despite the version number)</li>
         </ul>
     </b:column>
   </b:row>
