--- a/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
@@ -22,6 +22,7 @@
         <li>@parent</li>
         <li>@() jquery expressions</li>
       </ul>
+      <p>Compatible to PrimeFaces, but independently developed!</p>
 
     </b:column>
   </b:row>
