--- a/BootsFacesPresentation/src/main/webapp/5_components/showcaseBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/showcaseBF.xhtml
@@ -11,6 +11,14 @@
 	<header title="Showcase" />
 	<b:row>
 		<b:column col-xs="12">
+          <p><a href="http://127.0.0.1:8080/BootsFacesWeb">http://www.bootsfaces.net</a></p>
+          <p>Todo: Download figures</p>
+          <h2>BootsFaces</h2>
+          <p>roundabout 1200 Downloads from Maven Central in January</p>
+          <p>+ 225 from GitHub</p>
+          <p>+ 300 from BootsFaces.net</p>
+          <h2>AngularFaces</h2>
+          <p>400 downloads (give or take a few)</p>
 		</b:column>
 	</b:row>
 	
