--- a/BootsFacesPresentation/src/main/webapp/4_ajax/ajaxBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/4_ajax/ajaxBF.xhtml
@@ -11,6 +11,7 @@
 	<header title="Unified AJAX" />
 	<b:row>
 		<b:column col-xs="12">
+    <p> &lt;b:button onclick="ajax:myFavoriteBean.myMethod()" update="@form" &gt;</p>
 		</b:column>
 	</b:row>
 	
