--- a/BootsFacesPresentation/src/main/webapp/1_intro/behindTheScenes.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/behindTheScenes.xhtml
@@ -17,14 +17,9 @@
 
     </b:column>
     <b:column col-md="6">
-      <h3>This presention isn't Powerpoint.
-      It's a BootsFaces and AngularFaces application.</h3>
-      <br />
-      <ul>
-      <li>Bootstrap look and feel</li>
-      <li>AngularJS navigation widget</li>
-      <li>ngRoute AJAX navigation</li>
-      </ul>
+      <h3></h3>
+      <h3>This presention isn't Powerpoint.</h3>
+      <h3>It's a BootsFaces and AngularFaces application.</h3>
     </b:column>
   </b:row>
   <navigator right="#keyFeaturesBF" down="#funFacts" up="#start" />
