--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
@@ -9,6 +9,7 @@
 
 
   <header title="Bootstrap Grid System Explained" />
+ 
   <b:row>
     <b:column col-xs="12">
       <b:panel title="header consisting of 12 columns" look="primary"
@@ -31,6 +32,13 @@
         collapsible="false" />
     </b:column>
   </b:row>
+
+   <b:row>
+    <b:column col-xs="12">
+      Traditional, non-responsive design doesn't adapt to small screen size.
+    </b:column>
+  </b:row>
+  
   <navigator up="#simplification" down="gridSystemStack"
     right="gridSystemSourcecode" />
 
