--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystemStack.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystemStack.xhtml
@@ -29,6 +29,13 @@
 			<b:panel title="footer consisting of 12 columns" look="primary" collapsible="false"/>
 		</b:column>
 	</b:row>
+  
+   <b:row>
+    <b:column col-xs="12">
+      Responsive design adapting to small screen size
+    </b:column>
+  </b:row>
+  
 	<navigator up="gridSystem" down="#hidingColumns" right="gridSystemStackSourcecode"/>
 
 
