--- a/BootsFacesPresentation/src/main/webapp/4_ajax/ajaxBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/4_ajax/ajaxBF.xhtml
@@ -8,14 +8,22 @@
 	xmlns:ac="http://beyondjava.net/angularFacesCore">
 
 
-	<header title="Unified AJAX" />
-	<b:row>
-		<b:column col-xs="12">
-    <p> &lt;b:button onclick="ajax:myFavoriteBean.myMethod()" update="@form" &gt;</p>
-		</b:column>
-	</b:row>
-	
-	<navigator up="searchExpressions" down="components" />
+  <header title="Unified AJAX" />
+  <b:row>
+    <b:column small-screen="full">
+      <b:image value="4_ajax/ajax.png" style="width:100%"/>
+    </b:column>
+  </b:row>
+  <b:row>
+    <b:column small-screen="full">
+  
+      <p style="padding-top:100px">Concise alternative to ceremonious and verbose standard JSF</p>
+      <p>... no more fiddling with &lt;f:ajax /&gt; facets!</p>
+    </b:column>
+  </b:row>
+
+
+  <navigator up="searchExpressions" down="components" />
 
 
 
