--- a/BootsFacesPresentation/src/main/webapp/1_intro/funFacts.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/funFacts.xhtml
@@ -15,5 +15,5 @@
       </b:panel>
     </b:column>
   </b:row>
-  <navigator right="#keyFeaturesBF" up="#dogFood"/>
+  <navigator right="#keyFeaturesBF" up="#behindTheScenes"/>
 </ui:fragment>
