aligned BootsFaces slides with the PowerPoint presentation

--- a/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
@@ -11,6 +11,11 @@
   <header title="48 Components ... and Counting!" />
   <b:row>
     <b:column col-xs="12">
+  Visit our showcase at <a target="#" href="http://www.bootsfaces.net">http://www.bootsfaces.net </a>
+  </b:column>
+  </b:row>
+  <b:row>
+    <b:column col-xs="9">
       <h:form>
         <b:carousel id="wizard" styleClass="wizardPseudoClass"
           style="width:800px;height:580px;padding-top:20px"
@@ -93,7 +98,8 @@
     </b:column>
   </b:row>
 
-  <navigator up="ajaxBF" down="showcaseBF" />
+
+  <navigator up="ajaxBF" down="productionReady" />
 
 
 
