Reworked version of Components page

--- a/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
@@ -11,7 +11,7 @@
   <header title="48 Components ... and Counting!" />
   <b:row>
     <b:column col-xs="12">
-  Visit our showcase at <a target="#" href="http://www.bootsfaces.net">http://www.bootsfaces.net </a>
+  Visit our showcase at <a target="#" href="http://showcase.bootsfaces.net">http://showcase.bootsfaces.net </a>
   </b:column>
   </b:row>
   <b:row>
@@ -29,11 +29,21 @@
             </b:panel>
           </b:carouselItem>
           <b:carouselItem style="width:100%;height:100%">
-            <b:panel title="Components 2" look="danger  ">
+            <b:panel title="Layout" look="success">
               <ul>
-                <li>b:selectBooleanCheckbox
-                    
-                </li>
+                <li>b:container, b:row, b:column</li>
+                <li>Menus, NavBars and Sidebars</li>
+                <li>Tabs, carousels and wizards</li>
+                <li>b:panel</li>
+                <li>b:panelGrid</li>
+                <li>b:carousel</li>
+              </ul>
+            </b:panel>
+          </b:carouselItem>
+          <b:carouselItem style="width:100%;height:100%">
+            <b:panel title="Form Components 1" look="danger  ">
+              <ul>
+                <li>b:selectBooleanCheckbox</li>
                 <li><b:selectOneMenu label="b:selectOneMenu"
                     renderLabel="true" /></li>
                 <li>b:selectMultiMenu</li>
@@ -42,42 +52,30 @@
               </ul>
             </b:panel>
           </b:carouselItem>
-          <b:carouselItem style="width:100%;height:100%">
-            <b:panel title="Components 3" look="success">
-              <ul>
-                <li>b:carousel
-                </li>
-                <li>b:panel</li>
-                <li>b:panelGrid</li>
-                <li>b:container, b:row, b:column</li>
-                <li>Menus, NavBars and Sidebars</li>
-                <li>Tabs, carousels and wizards</li>
-              </ul>
-            </b:panel>
-          </b:carouselItem>
+          
          <b:carouselItem style="width:100%;height:100%">
-            <b:panel title="Components 4" look="success">
+            <b:panel title="Form Components 2" look="success">
               <ul>
                 <li>Buttons and CommandButtons
                 </li>
-                <li>Buttongroups and toolbars</li>
+                <li>Buttongroups and Toolbars</li>
+                <li>b:message and b:messages</li>
                 <li>Datatable (prototype)</li>
                 <li>b:poll</li>
-                <li>b:message and b:messages</li>
                 <li>b:slider</li>
               </ul>
             </b:panel>
           </b:carouselItem>
         <b:carouselItem style="width:100%;height:100%">
-            <b:panel title="Components 5" look="success">
+            <b:panel title="Bootstrap Components" look="success">
               <ul>
-                <li>Tooltips
-                </li>
-                <li>Thumbnails</li>
-                <li>Labels and Badges</li>
-                <li>Modal Dialogs</li>
-                <li>Tabs</li>
                 <li>Alerts</li>
+                <li>Tooltips</li>
+                <li><b:label text="Labels" severity="info" /> and
+                    <b:badge value="Badges" /></li>
+                <li>Modal Dialogs</li>
+                <li>Thumbnails</li>
+                <li>Tabs</li>
               </ul>
             </b:panel>
           </b:carouselItem>
