Move Components slide before Search Expressions

--- a/BootsFacesPresentation/src/main/webapp/2_layout/hidingColumns.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/hidingColumns.xhtml
@@ -67,6 +67,6 @@
                 </b:column>
   </b:row>
   
-  <navigator up="#gridSystem" down="searchExpressions"/>
+  <navigator up="#gridSystem" down="components"/>
   
 </ui:fragment>
