--- a/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions2.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions2.xhtml
@@ -23,7 +23,7 @@
     </b:column>
   </b:row>
 
-  <navigator up="hidingColumns" down="ajaxBF" left="searchExpressions" right="searchExpressions3"/>
+  <navigator up="components" down="ajaxBF" left="searchExpressions" right="searchExpressions3"/>
 
 
 
