--- a/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions3.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions3.xhtml
@@ -22,7 +22,7 @@
 		</b:column>
 	</b:row>
 	
-	<navigator up="hidingColumns" down="ajaxBF" left="searchExpressions2" />
+	<navigator up="components" down="ajaxBF" left="searchExpressions2" />
 
 
 
