--- a/BootsFacesPresentation/src/main/webapp/4_ajax/ajaxBF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/4_ajax/ajaxBF.xhtml
@@ -23,7 +23,7 @@
   </b:row>
 
 
-  <navigator up="searchExpressions" down="components" />
+  <navigator up="searchExpressions" down="productionReady" />
 
 
 
