--- a/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
@@ -97,7 +97,7 @@
   </b:row>
 
 
-  <navigator up="ajaxBF" down="productionReady" />
+  <navigator up="hidingColumns" down="searchExpressions" />
 
 
 
