--- a/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
@@ -27,7 +27,7 @@
     </b:column>
   </b:row>
 
-  <navigator up="hidingColumns" down="ajaxBF" right="searchExpressions2" />
+  <navigator up="components" down="ajaxBF" right="searchExpressions2" />
 
 
 
