--- a/BootsFacesPresentation/src/main/webapp/index2.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/index2.xhtml
@@ -19,6 +19,8 @@
     <b:carousel rendered="false" />
     <b:tabView rendered="false" />
     <b:tab rendered="false" />
+    <b:label text="tt" rendered="false"/>
+    <b:badge text="tt" rendered="false" />
   
     <b:container ng-app="navigationApp" rendered="#{loginBean.loggedIn}">
       <div ng-view="">
