rearranged the order of the slides

--- a/BootsFacesPresentation/src/main/webapp/1_intro/behindTheScenes.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/behindTheScenes.xhtml
@@ -5,22 +5,28 @@
   xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:p="http://primefaces.org/ui">
 
-  <header title="Eat Your own Dog Food!" />
+  <header title="Behind the Scenes" />
 
   <b:row>
-    <b:column col-md="6">
+    <b:column col-md="12">
 
-      <img src="DogFood.jpg"
-        alt="Image published under a Creative Commons Attribution-Share Alike 3.0 Unported https://commons.wikimedia.org/wiki/File:Chatuchak_Weekend_Market_P1100759.JPG"
-        style="padding-top: 10px; width: 100%; height: 100%" />
+    <h3>
+BootsFaces is an international team:</h3>
+<ul><li>
+Riccardo Massera („Let‘s add Bootstrap to JSF!“)
+</li><li>
+Yeray Santana Borges</li><li>
+Dario D‘Urzo</li><li>
+Stephan Rauh („Let‘s make JSF simple!“)
+</li></ul>
 
+<h3>AngularFaces:</h3>
+<ul><li>
+Stephan Rauh</li><li>
+What about you?
+</li></ul>
 
-    </b:column>
-    <b:column col-md="6">
-      <h3></h3>
-      <h3>This presention isn't Powerpoint.</h3>
-      <h3>It's a BootsFaces and AngularFaces application.</h3>
     </b:column>
   </b:row>
-  <navigator right="#keyFeaturesBF" down="#funFacts" up="#start" />
+  <navigator down="#dogFood" up="#start" />
 </ui:fragment>
