--- a/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/gridSystem.xhtml
@@ -39,7 +39,7 @@
     </b:column>
   </b:row>
   
-  <navigator up="#simplification" down="gridSystemStack"
+  <navigator up="#productionReady" down="#gridSystemStack"
     right="gridSystemSourcecode" />
 
 
