--- a/BootsFacesPresentation/src/main/webapp/2_layout/simplification.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/simplification.xhtml
@@ -15,6 +15,6 @@
     </b:column>
   </b:row>
 
-  <navigator up="#keyFeaturesBF" down="gridSystem"
+  <navigator up="#keyFeaturesBF" down="#components"
     right="simplification2" />
 </ui:fragment>
