--- a/BootsFacesPresentation/src/main/webapp/2_layout/simplification2.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/simplification2.xhtml
@@ -15,6 +15,6 @@
     </b:column>
   </b:row>
 
-  <navigator up="#keyFeaturesBF" down="gridSystem"
-    left="simplification" />
+  <navigator up="#keyFeaturesBF" down="#components"
+    left="#simplification" />
 </ui:fragment>
