--- a/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
@@ -16,7 +16,7 @@
   </b:row>
   <b:row>
     <b:column col-xs="9">
-      <h:form>
+       <h:form>
         <b:carousel id="wizard" styleClass="wizardPseudoClass"
           style="width:800px;height:580px;padding-top:20px"
           startAnimation="true" showIndicators="true">
@@ -92,12 +92,11 @@
           </b:carouselControl>
         </b:carousel>
       </h:form>
-
     </b:column>
   </b:row>
 
 
-  <navigator up="hidingColumns" down="searchExpressions" />
+  <navigator up="#simplification" down="#searchExpressions" />
 
 
 
