--- a/BootsFacesPresentation/src/main/webapp/1_intro/dogFood.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/dogFood.xhtml
@@ -18,7 +18,7 @@
     </b:column>
     <b:column col-md="6">
       <h3>This presention isn't Powerpoint.
-      It's a BootsFaces and AngularFaces application.</h3>
+      It's a JSF application running on BootsFaces and AngularFaces.</h3>
       <br />
       <ul>
       <li>Bootstrap look and feel</li>
@@ -27,5 +27,5 @@
       </ul>
     </b:column>
   </b:row>
-  <navigator right="#keyFeaturesBF" down="#funFacts" up="#start" />
+  <navigator right="#keyFeaturesBF" down="#funFacts" up="#behindTheScenes" />
 </ui:fragment>
