--- a/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/start.xhtml
@@ -26,11 +26,5 @@
       </b:panel>
     </b:column>
   </b:row>
-  <b:row>
-    <b:column col-md="6">short history of BootsFaces
-    </b:column>
-    <b:column col-md="6">short history of AngularFaces
-    </b:column>
-  </b:row>
-  <navigator right="#keyFeaturesBF" down="#dogFood"/>
+  <navigator right="#keyFeaturesBF" down="#behindTheScenes"/>
 </ui:fragment>
