started to populate the AngularFaces slides

--- a/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/10_angularJS/angularJS.xhtml
@@ -9,6 +9,7 @@
   <header title="AngularJS for JSF Programmers" />
   <b:row>
     <b:column col-md="12">
+      <h3>Goals and advantages:</h3>
         <ul>
           <li>leverage the power of the client</li>
           <li>reduce the server load</li>
