--- a/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/1_intro/keyFeaturesAF.xhtml
@@ -12,11 +12,11 @@
      <b:panel title="JSF on steroids" look="success" >
          <ul>
           <li>AngularJS 1.3</li>
-          <li>next stop: Angular2!</li>
+          <li>next stop: Angular2</li>
           <li>client-side components</li>
           <li>client-side validation</li>
           <li>internationalization</li>
-          <li>Advanced AJAX</li>
+          <li>advanced AJAX</li>
           <li>relaxed HTML-like code</li>
         </ul>
         </b:panel>
