minor changes and corrections

--- a/BootsFacesPresentation/src/main/webapp/10_angularJS/ngComponents.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/10_angularJS/ngComponents.xhtml
@@ -6,11 +6,17 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="How to use AngularJS with JSF?" />
+  <header title="Alternative Approaches to Integrate AngularJS" />
   <b:row>
     <b:column col-md="12">
         <ul>
-          <li>Marco Rinck's JUA</li>
+          <li>Marco Rinck's JUA
+          <ul>
+          <li>Add AngularJS components to JSF</li>
+            <li>Integrate them with JSF AJAX</li>
+            <li>Shallow but useful integration</li>
+          </ul>
+          </li>
           <li>AngularBeans</li>
           <li>AngularFaces</li>
         </ul>
