--- a/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
@@ -20,6 +20,7 @@
         <li>@previous</li>
         <li>@next</li>
         <li>@parent</li>
+        <li>@child(n)</li>
         <li>@() jquery expressions</li>
       </ul>
       <p>Compatible to PrimeFaces, but independently developed!</p>
