--- a/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
@@ -8,7 +8,7 @@
   xmlns:ac="http://beyondjava.net/angularFacesCore">
 
 
-  <header title="48 Components ... and Counting!" />
+  <header title="57 Components ... and Counting!" />
   <b:row>
     <b:column col-xs="12">
   Visit our showcase at <a target="#" href="http://showcase.bootsfaces.net">http://showcase.bootsfaces.net </a>
@@ -36,7 +36,6 @@
                 <li>Tabs, carousels and wizards</li>
                 <li>b:panel</li>
                 <li>b:panelGrid</li>
-                <li>b:carousel</li>
               </ul>
             </b:panel>
           </b:carouselItem>
@@ -49,6 +48,7 @@
                 <li>b:selectMultiMenu</li>
                 <li>b:switch</li>
                 <li>b:datePicker</li>
+                <li>b:growl</li>
               </ul>
             </b:panel>
           </b:carouselItem>
@@ -60,9 +60,7 @@
                 </li>
                 <li>Buttongroups and Toolbars</li>
                 <li>b:message and b:messages</li>
-                <li>Datatable (prototype)</li>
                 <li>b:poll</li>
-                <li>b:slider</li>
               </ul>
             </b:panel>
           </b:carouselItem>
@@ -76,6 +74,18 @@
                 <li>Modal Dialogs</li>
                 <li>Thumbnails</li>
                 <li>Tabs</li>
+              </ul>
+            </b:panel>
+          </b:carouselItem>
+           <b:carouselItem style="width:100%;height:100%">
+          <b:panel title="jQuery / Miscellaneous" look="success">
+              <ul>
+                <li>b:slider</li>
+                <li>b:datePicker</li>
+                <li>b:dataTable <b:badge value="0.9.0" /></li>
+                <li>b:tree  <b:badge value="0.9.0" /></li>
+                <li>b:switch</li>
+                <li>b:carousel (can also be used as wizards!)</li>
               </ul>
             </b:panel>
           </b:carouselItem>
