--- a/BootsFacesPresentation/src/main/webapp/header.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/header.xhtml
@@ -20,5 +20,6 @@
   <meta http-equiv="PRAGMA" content="NO-CACHE" />
   <meta name="copyright"
     content="TheCoder4.eu ( Riccardo Massera ), Stephan Rauh et al." />
+  <h:outputStylesheet library="presentation" name="presentation.css" />
 
 </ui:fragment>
