modified search expressions slide

--- a/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/3_searchExpressions/searchExpressions.xhtml
@@ -10,8 +10,8 @@
 
   <header title="Search Expressions" />
   <b:row>
-    <b:column col-xs="12">
-      <h2>Standard + PrimeFaces search expressions</h2>
+    <b:column col-xs="5">
+      
       <ul>
         <li>@form</li>
         <li>@this</li>
@@ -21,10 +21,17 @@
         <li>@next</li>
         <li>@parent</li>
         <li>@child(n)</li>
-        <li>@() jquery expressions</li>
+        <li>@("jquery expr.")</li>
       </ul>
-      <p>Compatible to PrimeFaces, but independently developed!</p>
 
+    </b:column>
+    <b:column col-xs="1">
+      <p style="font-size: 200px; margin-top: -50px">}</p>
+      <p style="font-size: 230px; margin-top: -100px">}</p>
+    </b:column>
+    <b:column col-xs="6">
+      <p style="margin-top: 85px">Standard JSF</p>
+      <p style="margin-top: 120px">Compatible to PrimeFaces<br /><br />but independently developed</p>
     </b:column>
   </b:row>
 
