Small changes to Components Slide

--- a/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
@@ -32,10 +32,10 @@
             <b:panel title="Layout" look="success">
               <ul>
                 <li>b:container, b:row, b:column</li>
-                <li>Menus, NavBars and Sidebars</li>
-                <li>Tabs, carousels and wizards</li>
                 <li>b:panel</li>
                 <li>b:panelGrid</li>
+                <li>Menus, NavBars, Sidebars, Jumbotron, Wells</li>
+                <li>Tabs, Carousels and wizards</li>
               </ul>
             </b:panel>
           </b:carouselItem>
@@ -47,8 +47,6 @@
                     renderLabel="true" /></li>
                 <li>b:selectMultiMenu</li>
                 <li>b:switch</li>
-                <li>b:datePicker</li>
-                <li>b:growl</li>
               </ul>
             </b:panel>
           </b:carouselItem>
@@ -60,6 +58,7 @@
                 </li>
                 <li>Buttongroups and Toolbars</li>
                 <li>b:message and b:messages</li>
+                <li>b:growl</li>
                 <li>b:poll</li>
               </ul>
             </b:panel>
@@ -68,17 +67,17 @@
             <b:panel title="Bootstrap Components" look="success">
               <ul>
                 <li>Alerts</li>
-                <li>Tooltips</li>
                 <li><b:label text="Labels" severity="info" /> and
                     <b:badge value="Badges" /></li>
                 <li>Modal Dialogs</li>
                 <li>Thumbnails</li>
                 <li>Tabs</li>
+                <li>Tooltips</li>
               </ul>
             </b:panel>
           </b:carouselItem>
            <b:carouselItem style="width:100%;height:100%">
-          <b:panel title="jQuery / Miscellaneous" look="success">
+          <b:panel title="jQuery UI / Miscellaneous" look="success">
               <ul>
                 <li>b:slider</li>
                 <li>b:datePicker</li>
