--- a/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/components.xhtml
@@ -81,7 +81,7 @@
               <ul>
                 <li>b:slider</li>
                 <li>b:datePicker</li>
-                <li>b:dataTable <b:badge value="0.9.0" /></li>
+                <li>b:dataTable <b:badge value="experimental / final release @ 0.9.0" /></li>
                 <li>b:tree  <b:badge value="0.9.0" /></li>
                 <li>b:switch</li>
                 <li>b:carousel (can also be used as wizards!)</li>
