added AngularFaces slides

--- a/BootsFacesPresentation/src/main/webapp/10_angularJS/ngComponents.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/10_angularJS/ngComponents.xhtml
@@ -6,7 +6,7 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="Alternative Approaches to Integrate AngularJS" />
+  <header title="Approaches to Integrate AngularJS" />
   <b:row>
     <b:column col-md="12">
         <ul>
@@ -17,11 +17,22 @@
             <li>Shallow but useful integration</li>
           </ul>
           </li>
-          <li>AngularBeans</li>
-          <li>AngularFaces</li>
+          <li>AngularBeans by Bessem Hmidi
+            <ul>
+              <li>Use pure HTML5/AngularJS for the client</li>
+              <li>Use JavaEE for the backend</li>
+              <li>Inspired by AngularFaces</li>
+              <li>... But different approach</li>
+            </ul>
+          </li>
+          <li>AngularFaces
+            <ul>
+              <li>Full integration of AngularJS and JSF</li>
+            </ul>
+          </li>
         </ul>
     </b:column>
   </b:row>
   
-   <navigator up="#angularJS" down="ngTable"/>
+   <navigator up="#angularJS" down="rapidPrototyping"/>
 </ui:fragment>
