--- a/BootsFacesPresentation/src/main/webapp/11_angularFaces/htmlLikeCode.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/11_angularFaces/htmlLikeCode.xhtml
@@ -6,13 +6,14 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="Client Side Validation" />
+  <header title="Relaxed, HTML-Like JSF Code" />
   <b:row>
     <b:column col-md="12">
-      <b:image value="11_angularFaces/csv.png" style="width:30%" />
-      <b:image value="11_angularFaces/csv2.png" style="width:68%" />
+    <b:image value="11_angularFaces/htmlLikeCode.png" style="width:100%"/>
+    <h3>AngularFaces allows you to get rid of the namespace prefixes.
+    </h3>
      </b:column>
   </b:row>
   
-   <navigator up="#i18n3" down="htmlLikeCode" />
+   <navigator up="#clientSideValidation" down="#productionReadyAF" />
 </ui:fragment>
