--- a/BootsFacesPresentation/src/main/webapp/11_angularFaces/i18n.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/11_angularFaces/i18n.xhtml
@@ -9,8 +9,13 @@
   <header title="Internationalization Made Easy" />
   <b:row>
     <b:column col-md="12">
+    <h3>Use the English JSF file
+    </h3>
+    <b:image value="11_angularFaces/rapidPrototyping.png" />
+    <h3>and add a simplified i18n.properties file</h3>
+    <b:image value="11_angularFaces/i18n_properties.png" style="width:50%"/>
      </b:column>
   </b:row>
   
-   <navigator up="ngTable" down="rapidPrototyping" />
+   <navigator up="#rapidPrototyping" down="#i18n2" />
 </ui:fragment>
