--- a/BootsFacesPresentation/src/main/webapp/11_angularFaces/i18n2.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/11_angularFaces/i18n2.xhtml
@@ -6,13 +6,12 @@
   xmlns:p="http://primefaces.org/ui">
 
 
-  <header title="Client Side Validation" />
+  <header title="Internationalization Made Easy" />
   <b:row>
     <b:column col-md="12">
-      <b:image value="11_angularFaces/csv.png" style="width:30%" />
-      <b:image value="11_angularFaces/csv2.png" style="width:68%" />
-     </b:column>
+      <b:image value="11_angularFaces/carshop_german.png"  style="width:100%"  />
+    </b:column>
   </b:row>
   
-   <navigator up="#i18n3" down="htmlLikeCode" />
+   <navigator up="#i18n" down="#i18n3" />
 </ui:fragment>
