--- a/BootsFacesPresentation/src/main/webapp/11_angularFaces/rapidPrototyping.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/11_angularFaces/rapidPrototyping.xhtml
@@ -9,8 +9,12 @@
   <header title="Rapid Prototyping" />
   <b:row>
     <b:column col-md="12">
+    <h3>Automatic generation of labels and messages (optionally)
+    </h3>
+    <b:image value="11_angularFaces/rapidPrototyping.png"  style="width:80%" />
+    <b:image value="11_angularFaces/carshop_spanish.png"  style="width:80%"  />
      </b:column>
   </b:row>
   
-   <navigator up="#i18n" down="clientSideValidation" />
+   <navigator up="#ngComponents" down="#i18n" />
 </ui:fragment>
