corrected a couple of typos

--- a/BootsFacesPresentation/src/main/webapp/2_layout/simplification.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/2_layout/simplification.xhtml
@@ -8,7 +8,7 @@
   xmlns:ac="http://beyondjava.net/angularFacesCore">
 
 
-  <header title="Clean and concise Bootstrap code" />
+  <header title="Clean and Concise Bootstrap Code" />
   <b:row>
     <b:column small="12">
       <b:image value="2_layout/BootsFaces.png" />
