--- a/BootsFacesPresentation/src/main/webapp/5_components/productionReady.xhtml
+++ b/BootsFacesPresentation/src/main/webapp/5_components/productionReady.xhtml
@@ -8,7 +8,7 @@
 	xmlns:ac="http://beyondjava.net/angularFacesCore">
 
 
-	<header title="Is it ready for production?" />
+	<header title="Is it Ready for Production?" />
 	<b:row>
 		<b:column col-xs="12">
           <p>BootsFaces: growing popularity</p>
